# matter_bmp280

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
components/bmp280_driver/: CMakeLists.txt
components/bmp280_driver/include/: bmp280_calibration.h  bmp280_driver.h  i2c_utils.h
components/bmp280_driver/src/: bmp280_calibration.c  bmp280_driver.c  i2c_utils.c
components/matter_interface/: CMakeLists.txt
components/matter_interface/include/: matter_manager.h  matter_pressure_sensor.h  matter_temperature_sensor.h
components/matter_interface/src/: matter_manager.cpp  matter_pressure_sensor.cpp  matter_temperature_sensor.cpp
main/: CMakeLists.txt  app_main.cpp
